--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
       </div>
     </div>
 
-    <script src="./script.js" type="text/JavaScript">
+    <script src="./script.js" type="text/javascript"></script>
   </body>
 </html>
